--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
                 "composer stan"
             ],
             "post-commit": [
+                "composer test",
                 "composer pint"
             ]
         }
