--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,7 +15,10 @@ jobs:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.3'
+        node-version: '18'
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
@@ -28,6 +31,8 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Install NPM dependencies
+      run: npm install
     - name: Execute tests (Unit and Feature tests) via Pest
       env:
         DB_CONNECTION: sqlite
