--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,6 +33,8 @@ jobs:
         touch database/database.sqlite
     - name: Install NPM dependencies
       run: npm install
+    - name: Build assets
+      run: npm run build
     - name: Execute tests (Unit and Feature tests) via Pest
       env:
         DB_CONNECTION: sqlite
