--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,10 +15,13 @@ jobs:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.3'
-        node-version: '18'
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+    - name: Install Node.js
+      uses: actions/setup-node@v3
+      with:
+          node-version: '18'
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
